--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -182,6 +182,7 @@
 							<input id="targetTable" type="text" name="addPersonaTo" style="display: none;" />
 							<input id="typePersona" type="text" name="typePersona" style="display: none;" />
 							<input id="fromLookUp" type="text" name="fromLookUp" style="display: none;" />
+							<input id="rowIndex" type="text" name="rowIndex" style="display: none;" />
 
 						</form>
 					</div>
@@ -289,6 +290,7 @@
 							<input id="targetTableFull" type="text" name="addPersonaFullTo" style="display: none;" />
 							<input id="typePersonaFull" type="text" name="typePersonaFull" style="display: none;" />
 							<input id="fromLookUpFull" type="text" name="fromLookUpFull" style="display: none;" />
+							<input id="rowIndexFull" type="text" name="rowIndexFull" style="display: none;" />
 						</form>
 					</div>
 					<div class="modal-footer">
@@ -847,16 +849,18 @@
 		  	}
 
 			//apre la finestra di inserimento di una persona
-			function openAddPersonaTo(target,type,fromLookup){
+			function openAddPersonaTo(target,type,fromLookup,rowIndex){
 				if(type == 'Full'){
 					$('#targetTableFull').val(target);
 					$('#typePersonaFull').val(type);
 					$('#fromLookUpFull').val(fromLookup);
+					$('#rowIndexFull').val(rowIndex);
 					console.log('fromLookUpFull:' + fromLookup);
 				}else{
 					$('#targetTable').val(target);
 					$('#typePersona').val(type);
 					$('#fromLookUp').val(fromLookup);
+					$('#rowIndex').val(rowIndex);
 					console.log('fromLookUp:' + fromLookup);
 
 					if(target == 'responsabiliScientifici'){
@@ -919,6 +923,30 @@
 					deselectAllText : 'Deseleziona tutti',
 					countSelectedText : '{0} selezionate'
 				});
+			}
+			
+			function sendAjaxModificaPersonaTo(target,type,fromLookup,rowIndex){
+				var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/modifica/|}]] + target + '/' + rowIndex;
+				if(type == 'Full'){
+					$.get(url).done(function(data) {
+						$('#container-addPersonaFullTo').html(data);
+						$('#add-'+ target).click();
+						openAddPersonaTo(target,type,true,rowIndex);
+					  })
+				  	.fail(function() {
+				    	alert( "error" );
+				 	 })
+				}else{
+					$.get(url).done(function(data) {
+						$('#container-addPersonaTo').html(data);
+						reInitModaleAddPersona();
+						$('#add-'+ target).click();
+						openAddPersonaTo(target,type,true,rowIndex);
+					  })
+				  	.fail(function() {
+				    	alert( "error" );
+				 	 })
+				}
 			}
 
 			//sumbit della modale di inserimento persona
@@ -989,6 +1017,20 @@
 
 				$("#" + target).load(url);
 				reInitDataTable(target);
+			}
+			
+			//modifica persona
+			function modificaPersonaFrom(target,caller){
+				var rowIndex = $(caller).parent().parent().data('row-id');
+				if(rowIndex == undefined)
+					rowIndex = 0;
+				if(target == 'responsabiliScientifici'){
+					sendAjaxModificaPersonaTo(target,'base',false,rowIndex);
+				}else if(target == 'docenti'){
+					sendAjaxModificaPersonaTo(target,'base',false,rowIndex);
+				}else if(target == 'responsabileSegreteria'){
+					sendAjaxModificaPersonaTo(target,'Full',false,rowIndex);
+				}
 			}
 
 			//delete di uno sponsor
@@ -1140,7 +1182,10 @@
 							<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
 						</td>
 						<td>
-							<a onclick="removePersonaFrom('responsabiliScientifici',this)" class="btn btn-danger" th:text="#{label.elimina}">
+							<a onclick="modificaPersonaFrom('responsabiliScientifici',this)" class="btn btn-warning col-xs-12" th:text="#{label.modifica}">
+								<span><i class="fa fa-pencil"></i></span>
+							</a>
+							<a onclick="removePersonaFrom('responsabiliScientifici',this)" class="btn btn-danger col-xs-12" th:text="#{label.elimina}">
 								<span><i class="fa fa-trash"></i></span>
 							</a>
 						</td>
@@ -1183,7 +1228,10 @@
 							<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
 						</td>
 						<td>
-							<a onclick="removePersonaFrom('docenti',this)" class="btn btn-danger" th:text="#{label.elimina}">
+							<a onclick="modificaPersonaFrom('docenti',this)" class="btn btn-warning col-xs-12" th:text="#{label.modifica}">
+								<span><i class="fa fa-pencil"></i></span>
+							</a>
+							<a onclick="removePersonaFrom('docenti',this)" class="btn btn-danger col-xs-12" th:text="#{label.elimina}">
 								<span><i class="fa fa-trash"></i></span>
 							</a>
 						</td>
@@ -1223,7 +1271,10 @@
 						<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.telefono}"></td>
 						<td th:text="${eventoWrapper.evento.responsabileSegreteria.anagrafica.cellulare}"></td>
 						<td>
-							<a onclick="removePersonaFrom('responsabileSegreteria',this)" class="btn btn-danger" th:text="#{label.elimina}">
+							<a onclick="modificaPersonaFrom('responsabileSegreteria',this)" class="btn btn-warning col-xs-12" th:text="#{label.modifica}">
+								<span><i class="fa fa-pencil"></i></span>
+							</a>
+							<a onclick="removePersonaFrom('responsabileSegreteria',this)" class="btn btn-danger col-xs-12" th:text="#{label.elimina}">
 								<span><i class="fa fa-trash"></i></span>
 							</a>
 						</td>
