--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -145,12 +145,13 @@
 				case 'dichiarazioneAssenzaConflittoInteresse' : 				tipoAllegato = 'FILE_DICHIARAZIONE_ASSENZA_CONFLITTO_INTERESSE'; break;
 				case 'autocertificazioneAutorizzazioneMinisteroSalute' :		tipoAllegato = 'FILE_AUTOCERTIFICAZIONE_AUTORIZZAZIONE_MINISTERO_SALUTE'; break;
 				case 'autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia' :	tipoAllegato = 'FILE_AUTOCERTIFICAZIONE_ASSENZA_PARTECIPAZIONE_SPONSOR_INFANZIA'; break;
+				case 'importEventiDaCsvFile' :									tipoAllegato = 'FILE_EVENTI_PIANO_FORMATIVO'; break;
 
 				//File da firmare per engineering
 				case 'fileDaFirmare' :						tipoAllegato = 'FILE_DA_FIRMARE'; break;
 			}
 
-			var stato = [[${__${wrapper}__ != comunicazioneWrapper and __${wrapper}__ != accreditamentoWrapper and __${wrapper}__ != eventoWrapper and __${wrapper}__ != eventoWrapper?.tempPersonaEvento?.anagrafica and __${wrapper}__ != providerForm  and __${wrapper}__ != engineeringWrapper} ? ${__${wrapper}__.statoAccreditamento?.name()}]];
+			var stato = [[${__${wrapper}__ != comunicazioneWrapper and __${wrapper}__ != pianoFormativoWrapper and __${wrapper}__ != accreditamentoWrapper and __${wrapper}__ != eventoWrapper and __${wrapper}__ != eventoWrapper?.tempPersonaEvento?.anagrafica and __${wrapper}__ != providerForm  and __${wrapper}__ != engineeringWrapper} ? ${__${wrapper}__.statoAccreditamento?.name()}]];
 
 	 		var oMyForm = new FormData();
             oMyForm.append("multiPartFile", $(element)[0].files[0]);
@@ -212,6 +213,7 @@
 						case 'FILE_DICHIARAZIONE_ASSENZA_CONFLITTO_INTERESSE' : 					inputName = 'dichiarazioneAssenzaConflittoInteresse'; break;
 						case 'FILE_AUTOCERTIFICAZIONE_AUTORIZZAZIONE_MINISTERO_SALUTE' :			inputName = 'autocertificazioneAutorizzazioneMinisteroSalute'; break;
 						case 'FILE_AUTOCERTIFICAZIONE_ASSENZA_PARTECIPAZIONE_SPONSOR_INFANZIA' :	inputName = 'autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia'; break;
+						case 'FILE_EVENTI_PIANO_FORMATIVO' :										inputName = 'importEventiDaCsvFile'; break;
 
 						//File da firmare per engineering
 						case 'FILE_DA_FIRMARE' :							inputName = 'fileDaFirmare'; break;
