--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -182,7 +182,7 @@
 							<input id="targetTable" type="text" name="addPersonaTo" style="display: none;" />
 							<input id="typePersona" type="text" name="typePersona" style="display: none;" />
 							<input id="fromLookUp" type="text" name="fromLookUp" style="display: none;" />
-							<input id="modificaElemento" type="text" name="modificaElemento" style="display: none;" />
+							<input id="modificaElementoPersona" type="text" name="modificaElemento" style="display: none;" />
 
 						</form>
 					</div>
@@ -290,7 +290,7 @@
 							<input id="targetTableFull" type="text" name="addPersonaFullTo" style="display: none;" />
 							<input id="typePersonaFull" type="text" name="typePersonaFull" style="display: none;" />
 							<input id="fromLookUpFull" type="text" name="fromLookUpFull" style="display: none;" />
-							<input id="modificaElementoFull" type="text" name="modificaElementoFull" style="display: none;" />
+							<input id="modificaElementoPersonaFull" type="text" name="modificaElementoFull" style="display: none;" />
 						</form>
 					</div>
 					<div class="modal-footer">
@@ -552,6 +552,28 @@
 
 			    initAllCommon();
 			});
+			
+			//reinit dei widget complessi nella modale add persona
+			function reInitModaleAddAttivita(){
+				$('input.flat').iCheck({
+		            checkboxClass: 'icheckbox_flat-green',
+		            radioClass: 'iradio_flat-green'
+		        });
+				//reinit selecpicker
+			    $('select').selectpicker({
+					selectAllText : 'Seleziona tutti',
+					deselectAllText : 'Deseleziona tutti',
+					countSelectedText : '{0} selezionate'
+				});
+				
+			    var handler = $('.ora').clockpicker({
+			    	donetext: [[#{label.applica}]],
+			    	align: 'left',
+			        autoclose: true,
+			        'default': 'now'
+			    });
+
+			}
 
 			function initAllCommon(){
 				days = getDayNamesShort();
@@ -854,13 +876,13 @@
 					$('#targetTableFull').val(target);
 					$('#typePersonaFull').val(type);
 					$('#fromLookUpFull').val(fromLookup);
-					$('#modificaElementoFull').val(modificaElemento);
+					$('#modificaElementoPersonaFull').val(modificaElemento);
 					console.log('fromLookUpFull:' + fromLookup);
 				}else{
 					$('#targetTable').val(target);
 					$('#typePersona').val(type);
 					$('#fromLookUp').val(fromLookup);
-					$('#modificaElemento').val(modificaElemento);
+					$('#modificaElementoPersona').val(modificaElemento);
 					console.log('fromLookUp:' + fromLookup);
 
 					if(target == 'responsabiliScientifici'){
@@ -1445,7 +1467,7 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:attr="data-row-id=${__${status2.index}__}" th:each="attivita , status2 : ${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma}">
+									<tr th:attr="data-row-id=${__${status2.index}__}, data-is-pausa=${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].isPausa()}" th:each="attivita , status2 : ${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma}">
 										<td th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].orarioInizio}"></td>
 										<td th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].orarioFine}"></td>
 										<td th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].argomento}"></td>
@@ -1455,7 +1477,10 @@
 										<td th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].metodologiaDidattica?.nome}"></td>
 										<td th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].oreAttivita}"></td>
 										<td>
-											<a onclick="removeAttivitaFrom('attivitaRES',this)" class="btn btn-danger" th:text="#{label.elimina}">
+											<a onclick="modificaAttivitaFrom('attivitaRES',this)" class="btn btn-warning col-xs-12" th:text="#{label.modifica}">
+												<span><i class="fa fa-pencil"></i></span>
+											</a>
+											<a onclick="removeAttivitaFrom('attivitaRES',this)" class="btn btn-danger col-xs-12" th:text="#{label.elimina}">
 												<span><i class="fa fa-trash"></i></span>
 											</a>
 										</td>
@@ -1503,7 +1528,7 @@
 											<th th:text="#{label.ruoli_coinvolti}">RUOLI COINVOLTI</th>
 											<th th:text="#{label.ore_attivita}">ORE ATTIVITA'</th>
 											<th>
-												<a id="add-attivita" class="btn btn-success" th:title="#{label.inserisci_attivita}" th:onclick="'openAddAttivitaTo(\'attivitaFSC\',__${status.index}__,false)'" data-toggle="modal" data-target=".modal-add-attivitaFSC">
+												<a id="add-attivita" class="btn btn-success" th:title="#{label.inserisci_attivita}" th:onclick="'openAddAttivitaTo(\'attivitaFSC\',__${status.index}__)'" data-toggle="modal" data-target=".modal-add-attivitaFSC">
 													<span><i class="fa fa-plus"></i></span>
 												</a>
 											</th>
@@ -1531,7 +1556,10 @@
 											 </td>
 											<td th:text="${eventoWrapper.programmaEventoFSC[__${status.index}__].azioniRuoli[__${status2.index}__].tempoDedicato}"></td>
 											<td>
-												<a onclick="removeAttivitaFrom('attivitaFSC',this)" class="btn btn-danger" th:text="#{label.elimina}">
+												<a onclick="modificaAttivitaFrom('attivitaFSC',this)" class="btn btn-warning col-xs-12" th:text="#{label.modifica}">
+													<span><i class="fa fa-pencil"></i></span>
+												</a>
+												<a onclick="removeAttivitaFrom('attivitaFSC',this)" class="btn btn-danger col-xs-12" th:text="#{label.elimina}">
 													<span><i class="fa fa-trash"></i></span>
 												</a>
 											</td>
@@ -1580,7 +1608,10 @@
 									<td th:text="${attivita.metodologiaDidattica?.nome}"></td>
 									<td th:text="${attivita.oreAttivita}"></td>
 									<td>
-										<a onclick="removeAttivitaFrom('attivitaFAD',this)" class="btn btn-danger" th:text="#{label.elimina}">
+										<a onclick="modificaAttivitaFrom('attivitaFAD',this)" class="btn btn-warning col-xs-12" th:text="#{label.modifica}">
+											<span><i class="fa fa-pencil"></i></span>
+										</a>
+										<a onclick="removeAttivitaFrom('attivitaFAD',this)" class="btn btn-danger col-xs-12" th:text="#{label.elimina}">
 											<span><i class="fa fa-trash"></i></span>
 										</a>
 									</td>
