--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -555,7 +555,7 @@
 			
 			//reinit dei widget complessi nella modale add persona
 			function reInitModaleAddAttivita(){
-				$('input.flat').iCheck({
+			/* 	$('input.flat').iCheck({
 		            checkboxClass: 'icheckbox_flat-green',
 		            radioClass: 'iradio_flat-green'
 		        });
@@ -571,7 +571,7 @@
 			    	align: 'left',
 			        autoclose: true,
 			        'default': 'now'
-			    });
+			    }); */
 
 			}
 
